<resources>
    <string name="app_name">SimpanQ</string>
    <string name="title_link">Tautan</string>
    <string name="title_planing">Rencana</string>
    <string name="title_notes">Catatan</string>
    <string name="title_task">Tugas</string>
    <string name="title_setting">Pengaturan</string>
    <string name="title_save_link">Simpan Tautan</string>
    <string name="title_save_planing">Simpan Rencana</string>
    <string name="title_save_notes">Simpan Catatan</string>
    <string name="title_save_task">Simpan Tugas</string>
    <string name="title_save_setting">Simpan Pengaturan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_save">Simpan</string>
    <string name="title_search_link">Cari Tautan</string>
    <string name="title_open">Buka</string>
    <string name="title_edit">Ubah</string>
    <string name="title_copy">Salin Link</string>
    <string name="title_share">Bagikan</string>
    <string name="title_delete">Hapus</string>
    <string name="title_link_failed">Url yang anda masukan salah</string>
    <string name="title_is_not_empty">Silahkan isi terlebih dahulu</string>
    <string name="title_link_copy">Link Disalin</string>
    <string name="title_logo_left">Simpan</string>
    <string name="title_logo_right">Q</string>
    <string name="title_hint_link_name">Judul... (optional)</string>
    <string name="title_hint_link_content">Link, contoh : http://google.com</string>
    <string name="title_dialog_yes">Iya</string>
    <string name="title_dialog_cancel">Batal</string>
    <string name="title_dialog_delete_link">Hapus Tautan ?</string>
    <string name="title_dialog_delete_plan">Hapus Rencana ?</string>
    <string name="title_dialog_body_link">Apakah kamu yakin untuk menghapus tautan ini ?</string>
    <string name="title_dialog_body_plan">Apakah kamu yakin untuk menghapus rencana ini ?</string>
    <string name="title_search_plan">Cari Rencana</string>
    <string name="title_label">Judul</string>
    <string name="title_plan_content">Belajar bareng...</string>
    <string name="title_label_location">Lokasi</string>
    <string name="title_plan_location">Kampus Polban...</string>
    <string name="title_label_date">Tanggal</string>
    <string name="title_plan_date">12 Desember 2021</string>
    <string name="title_label_start_time">Mulai</string>
    <string name="title_label_end_time">Berakhir</string>
    <string name="title_label_time">Waktu</string>
    <string name="title_plan_start_time">00.00</string>
    <string name="title_plan_end_time">12:00</string>
    <string name="title_label_notes">Catatan</string>
    <string name="title_plan_notes">Optional</string>
    <string name="title_plan_warning">Mohon isi waktu mulai terlebih dahulu</string>
    <string name="title_activity_edit">EditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>