<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_16"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:gravity="center_horizontal"
        android:text="@string/title_dialog_delete_link"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="@dimen/size_280"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/title_dialog_body_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <View
        android:id="@+id/lineHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_natural_cool"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"/>

    <Button
        android:id="@+id/btnCancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:fontFamily="@font/bold"
        android:text="@string/title_dialog_cancel"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineHorizontal" />

    <View
        android:id="@+id/lineVertical"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:background="@color/grey_natural_cool"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/lineHorizontal"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"/>

    <Button
        android:id="@+id/btnDelete"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:fontFamily="@font/bold"
        android:text="@string/title_dialog_yes"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/lineHorizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>