<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plan.add.AddPlanActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:id="@+id/tvGroupChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/title_save_planing"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="?attr/strokeColor"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/viewToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:background="@drawable/bg_card_outline"
                android:padding="@dimen/padding_16">

                <TextView
                    android:id="@+id/labelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_label"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_16"
                    app:drawableStartCompat="@drawable/ic_outline_check_circle_24"
                    app:drawableTint="@color/primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/light"
                    android:hint="@string/title_plan_content"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintTop_toBottomOf="@+id/labelTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/bg_card_outline"
                android:padding="@dimen/padding_16">

                <TextView
                    android:id="@+id/labelLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_label_location"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_16"
                    app:drawableStartCompat="@drawable/ic_outline_add_location_24"
                    app:drawableTint="@color/primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/light"
                    android:hint="@string/title_plan_location"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintTop_toBottomOf="@+id/labelLocation" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/bg_card_outline"
                android:padding="@dimen/padding_16">

                <TextView
                    android:id="@+id/labelDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_label_date"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_16"
                    app:drawableStartCompat="@drawable/ic_outline_date_range_24"
                    app:drawableTint="@color/primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:focusable="false"
                    android:fontFamily="@font/light"
                    android:hint="@string/title_plan_date"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintTop_toBottomOf="@+id/labelDate" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:background="@drawable/bg_card_outline"
                    android:padding="@dimen/padding_16"
                    app:layout_constraintEnd_toStartOf="@+id/layoutEndTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/labelStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_8"
                        android:fontFamily="@font/regular"
                        android:text="@string/title_label_start_time"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/font_16"
                        app:drawableStartCompat="@drawable/ic_baseline_timer_24"
                        app:drawableTint="@color/primary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:focusable="false"
                        android:fontFamily="@font/light"
                        android:hint="@string/title_plan_start_time"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8"
                        android:textSize="@dimen/font_16"
                        app:layout_constraintTop_toBottomOf="@+id/labelStartTime" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card_outline"
                    android:padding="@dimen/padding_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/layoutStartTime"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/labelEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_8"
                        android:fontFamily="@font/regular"
                        android:text="@string/title_label_end_time"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/font_16"
                        app:drawableStartCompat="@drawable/ic_baseline_timer_off_24"
                        app:drawableTint="@color/primary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:background="@android:color/transparent"
                        android:editable="false"
                        android:focusable="false"
                        android:fontFamily="@font/light"
                        android:hint="@string/title_plan_end_time"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8"
                        android:textSize="@dimen/font_16"
                        app:layout_constraintTop_toBottomOf="@+id/labelEndTime" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/bg_card_outline"
                android:padding="@dimen/padding_16">

                <TextView
                    android:id="@+id/labelNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_label_notes"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_16"
                    app:drawableStartCompat="@drawable/ic_outline_note_alt_24"
                    app:drawableTint="@color/primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/light"
                    android:hint="@string/title_plan_notes"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintTop_toBottomOf="@+id/labelNotes" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:text="@string/title_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>