<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottomsheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_24">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_5"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/bg_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:fontFamily="@font/regular"
            android:text="@string/title_open"
            android:textSize="@dimen/font_16"
            android:padding="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:drawablePadding="@dimen/padding_16"
            app:drawableStartCompat="@drawable/ic_baseline_open_in_new_24" />

        <View
            android:id="@+id/viewOpen"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_netral"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOpen" />

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/title_edit"
            android:textSize="@dimen/font_16"
            android:padding="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewOpen"
            android:drawablePadding="@dimen/padding_16"
            app:drawableStartCompat="@drawable/ic_edit"/>

        <View
            android:id="@+id/viewEdit"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_netral"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEdit" />

        <TextView
            android:id="@+id/tvCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/title_copy"
            android:textSize="@dimen/font_16"
            android:padding="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewEdit"
            android:drawablePadding="@dimen/padding_16"
            app:drawableStartCompat="@drawable/ic_baseline_content_copy_24"/>

        <View
            android:id="@+id/viewCopy"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_netral"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCopy" />

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/title_share"
            android:textSize="@dimen/font_16"
            android:padding="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewCopy"
            android:drawablePadding="@dimen/padding_16"
            app:drawableStartCompat="@drawable/ic_baseline_share_24"/>

        <View
            android:id="@+id/viewShare"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_netral"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShare" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/title_delete"
            android:textSize="@dimen/font_16"
            android:padding="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewShare"
            android:drawablePadding="@dimen/padding_16"
            app:drawableStartCompat="@drawable/ic_baseline_delete_outline_24"/>

        <View
            android:id="@+id/viewDelete"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_netral"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDelete"
            android:layout_marginBottom="@dimen/margin_24"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>